<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minWidth="280dip"
    
    android:background="#00ffffff">
    
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
         android:background="@drawable/shape2"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp" 

        >
        
        <TextView
         android:layout_marginLeft="20dp"
         android:id="@+id/textView3"
		 android:layout_marginTop="18dp"
		 android:textColor="#000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/info12" />
		
      
		<SeekBar
            android:id="@+id/seekbarUrgency"
            android:layout_width="200dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

			
    	
       

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 

        >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/info24" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/info25" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/info23" />

    </LinearLayout>

     <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             
             android:background="#ffffff" 
             
             >

             <TextView
                 android:layout_marginTop="12dp"
                 android:layout_marginLeft="20dp"
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#000000"
                 android:text="@string/info13" />

             <Spinner
                 android:id="@+id/spnAutoTaskHour"
                 android:layout_marginTop="10dp"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content" />

             <TextView
                 android:id="@+id/textView6"
                 android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/colon" />

             <Spinner
                 android:id="@+id/spnAutoTaskMin"
                 android:layout_marginTop="10dp"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content" 
                 android:layout_marginRight="20dp"/>

         </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
        
        
         >

         <Button
             android:layout_marginTop="10dp"
             android:background="@drawable/shape"
           	 android:paddingBottom="10dp"  
          	 android:layout_marginRight="5dp"
          	 android:layout_marginLeft="15dp"
          	 android:layout_marginBottom="20dp"
             android:paddingTop="10dp"
             android:id="@+id/button_yes_auto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/yes" 
             android:layout_weight="1"
             />

         <Button
             android:layout_marginTop="10dp"
             android:background="@drawable/shape"
           	 android:paddingBottom="10dp"  
          	 android:layout_marginLeft="5dp"
          	 android:layout_marginRight="15dp"
          	 android:layout_marginBottom="20dp"
             android:paddingTop="10dp"
             android:id="@+id/button_no_auto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/no" 
             android:layout_weight="1"
             />

     </LinearLayout>
	</LinearLayout>
</LinearLayout>
