<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#efefef"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#ffffff" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp" >

        <Button
          	android:background="@drawable/shape"
           	android:paddingBottom="10dp"  
          	android:layout_marginRight="5dp"
            android:paddingTop="10dp"
            android:id="@+id/btnManualAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/info8" />

        <Button
            android:background="@drawable/shape"
           	android:paddingBottom="10dp"  
          	android:layout_marginRight="5dp"
            android:paddingTop="10dp"
            android:id="@+id/btnAutoAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/info9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:padding="20dp" >

        <ListView
            android:id="@+id/todolist"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            >
        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:padding="20dp" >

        <Button
            android:id="@+id/btnClearTodoList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/info10" />

        <Button
            android:id="@+id/btnExecute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/info11" />
    </LinearLayout>

</LinearLayout>