<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:background="#00ffffff">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:background="@drawable/shape2"
        
        >

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="40dp" 
	        android:layout_margin="10dp"
	        
	        >
	        
	        <TextView
	         android:id="@+id/textView3"
			 android:layout_marginTop="10dp"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:textColor="#000000"
	         android:text="@string/info17" />
	        
	          <Spinner
	                 android:id="@+id/spinnerPlanSelect"
	                 android:layout_width="0dp"
	                 android:layout_height="wrap_content"
	                 android:layout_weight="1"
	                  />
	
	    </LinearLayout>
	
	     <LinearLayout
	         android:layout_width="fill_parent"
	         android:layout_height="40dp"
	         android:layout_margin="10dp"
	         android:orientation="horizontal" >
	
	             <TextView
	                 android:id="@+id/textView5"
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:layout_marginTop="3dp"
	                 android:textColor="#000000"
	                 android:text="@string/info13" />
	
	             <Spinner
	                 android:id="@+id/spnManualTaskHour"
					 android:layout_width="0dp"
	                 android:layout_height="wrap_content" 
	                 android:layout_weight="1"
	                 
	                 />
	
	             <TextView
	                 android:id="@+id/textView6"
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:text="@string/colon" />
	
	             <Spinner
	                 android:id="@+id/spnManualTaskMin"
					 android:layout_width="0dp"
	                 android:layout_height="wrap_content" 
	                 android:layout_weight="1"
	                 />
				 
	              <TextView
	                 android:id="@+id/textViewcolon"
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:text="@string/colon" />
	             <Spinner
	                 android:id="@+id/spnManualTaskSec"
					 android:layout_width="0dp"
	                 android:layout_height="wrap_content"
	                 android:layout_weight="1" />
	
	         </LinearLayout>
	
	    	 <LinearLayout
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content" 
	         android:layout_margin="20dp"
	         >
	
	         <Button
	             android:background="@drawable/shape" 
	             android:id="@+id/button_yes_manual"
	              android:paddingBottom="10dp"  
	          	android:layout_marginRight="5dp"
	            android:paddingTop="10dp"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:text="@string/info14" 
	             android:layout_weight="1"
	             />
	
	         <Button
	             android:background="@drawable/shape" 
	             android:paddingBottom="10dp"  
	       		android:layout_marginLeft="5dp"
	            
	            android:paddingTop="10dp"
	             android:id="@+id/button_no_manual"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:text="@string/info15" 
	             android:layout_weight="1"
	             />
	
	     </LinearLayout>
	</LinearLayout>
</LinearLayout>